sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: ';' expected but 'while' found.
  }while (chgt)
   ^AlgCocktailSort1:21: error: 'while' expected but '}' found.
} 
^